<resources>
    <string name="app_name">MyWeather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_favourite_sities">enter your favourite sities</string>
    <string name="enter_town_2">Enter town 2</string>
    <string name="your_favourite_towns">your favourite towns:</string>
    <string name="town_1">Town 1</string>
    <string name="town_2">Town 2</string>
    <string name="town_3">Town 3</string>
    <string name="show_weather">Show weather</string>
    <string name="enter_city_name">Enter City Name</string>
    <string name="type_your_email">Type your Email</string>
    <string name="type_your_password">Type Your Password</string>
    <string name="sign_in">Sign In</string>
    <string name="not_registered_yet_sign_up">Not Registered Yet , Sign Up !</string>
    <string name="type_your_name">Type your Name</string>
</resources>