<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#80B4DD"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_favourite_towns"
        android:layout_margin="10dp"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/txtTown1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTown1"
        android:gravity="center_horizontal"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginBottom="56dp"
        android:text="@string/town_1"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txtTown2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
    />

    <TextView
        android:id="@+id/txtTown2"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:layout_marginBottom="176dp"
        android:text="@string/town_2"
        android:gravity="center_horizontal"

        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txtTown3"
        tools:layout_editor_absoluteX="16dp" />

    <TextView

        android:id="@+id/txtTown3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginBottom="188dp"
        android:text="@string/town_3"

        android:gravity="center_horizontal"

        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnshowWather"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnshowWather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/show_weather"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.415" />

</androidx.constraintlayout.widget.ConstraintLayout>
